    The global default is 80; it can also be changed on a mode- and
    buffer-specific basis.
  - Setting it to zero disables word wrap.
  - If, when typing, the line length exceeds the maximum, a line break
    is inserted in the appropriate location.
  - A 'wrap guide' is drawn in the text area at the wrap column. This
    is similar to the LineGuides plugin.
- Ollie Rutherfurd's scrolling actions:
  - Scroll Up/Down Line: C+' and C+/
  - Scroll Up/Down Page: A+' and A+/
  - Center Cursor: C+e C+i
- Checkbox to the right of the 'Filter:' field in the VFS browser can be
  used to temporarily display all files in the current directory
- 'File name' text field is now displayed in the 'Open File' dialog box
  as well as the 'Save As' dialog box
- A buffer list combo box replaces the buffer tabs component and
  View->Current Buffer menu
- 'File->Save a Copy As' command: same as 'Save As', except that the
  buffer's name isn't changed to the new name
- Commands in View->Docking Areas menu collapse/expand the window
  docking areas (bound to F6, F7, F8, F9 for top, left, right and bottom
  collapse/expand, respectively)
- jEdit now differentiates between the 'indent width' and 'tab width'.
  - the 'tab width' is only used when displaying tabs (\t), so should
    probably be set to 8 in most circumstances
  - the 'indent width' is used when shifting the indent, either using
    the 'shift-left' or 'shift-right' commands, or auto indent feature
- 'Synchronized Scrolling', which can be enabled in View->Scrolling,
  forces all text areas in a view to have the same scroll bar positions
- 'Insert File' command in File menu
- 'Replace and Find Next' command added (replaces 'Replace and Find Next'
  macro)
- If the <jedit install dir>/site-props directory exists, all property
  files are loaded from it on jEdit startup before user-specific properties.
  This can be used to enforce site-wide key bindings, color schemes, etc
  on multi-user systems (Mike Dillon)