@@ -63,7 +63,7 @@ wing-comment.shortcut=C+e C+c
 find-selection.shortcut=C+e C+f
 replace-and-find-next.shortcut=C+e C+g
 hypersearch-selection.shortcut=C+e C+h
-center-cursor.shortcut=C+e C+i
+center-caret.shortcut=C+e C+i
 scroll-to-current-line.shortcut=C+e C+j
 block-comment.shortcut=C+e C+k
 select-line-range.shortcut=C+e C+l
